Update _header.scss. Fix overlapping cart icon by cart counter

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -119,8 +119,8 @@ header {
           color: rgb(224, 227, 237);
           position: absolute;
           top: 50%;
-          right: 0;
-          transform: translate(50%, -50%);
+          left: 100%;
+          transform: translate(-14px, -50%);
         }
 
         &:hover {
